--- a/HumanResource/_Imports.razor
+++ b/HumanResource/_Imports.razor
@@ -10,5 +10,6 @@
 @using HumanResource.Shared
 @using SharedLibrary.Services
 @using SharedLibrary.Data
-@using HumanResource.Data
+@using SharedLibrary.Data.HumanResource
+
 @using Microsoft.Extensions.Configuration
