modified and moved data models to sharedlibrary

--- a/Finance/_Imports.razor
+++ b/Finance/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using SharedLibrary.Services
 @using SharedLibrary.Data
+@using SharedLibrary.Data.Finance
 @using Microsoft.Extensions.Configuration
