--- a/HumanResource/Pages/Interns.razor
+++ b/HumanResource/Pages/Interns.razor
@@ -21,18 +21,21 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var intern in interns)
+            @if (interns != null)
             {
-                <tr>
-                    <td>@intern.Name</td>
-                    <td>@intern.Department</td>
-                    <td>@intern.Position</td>
-                    <td>@intern.Email</td>
-                    <td>
-                        <button class="btn btn-sm btn-info" @onclick="() => ShowEditForm(intern)">Edit</button>
-                        <button class="btn btn-sm btn-danger" @onclick="() => DeleteIntern(intern)">Delete</button>
-                    </td>
-                </tr>
+                @foreach (var intern in interns)
+                {
+                    <tr>
+                        <td>@intern.Name</td>
+                        <td>@intern.Department</td>
+                        <td>@intern.Position</td>
+                        <td>@intern.Email</td>
+                        <td>
+                            <button class="btn btn-sm btn-info" @onclick="() => ShowEditForm(intern)">Edit</button>
+                            <button class="btn btn-sm btn-danger" @onclick="() => DeleteIntern(intern)">Delete</button>
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
