--- a/Logistics/Pages/Fuel.razor
+++ b/Logistics/Pages/Fuel.razor
@@ -7,7 +7,8 @@
 
     @if (showCreateForm)
     {
-        <FuelForm OnFuelCreated="AddFuel" OnCancel="HideCreateForm" />
+        
+        <Logistics.Components.FuelForm OnFuelCreated="AddFuel" OnCancel="HideCreateForm" />
     }
 
     <table class="table table-striped">
@@ -54,7 +55,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <FuelForm FuelLog="selectedFuelLog" OnFuelUpdated="UpdateFuel" OnCancel="HideEditForm" />
+                        <Logistics.Components.FuelForm FuelLog="selectedFuelLog" OnFuelUpdated="UpdateFuel" OnCancel="HideEditForm" />
                     </div>
                 </div>
             </div>
