--- a/HumanResource/Pages/Pensioners.razor
+++ b/HumanResource/Pages/Pensioners.razor
@@ -7,7 +7,8 @@
 
     @if (showCreateForm)
     {
-        <PensionerForm OnPensionerCreated="AddPensioner" OnCancel="HideCreateForm" />
+        
+        <HumanResource.Models.PensionerForm OnPensionerCreated="AddPensioner" OnCancel="HideCreateForm" />
     }
 
     <table class="table table-striped">
@@ -52,7 +53,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <PensionerForm Pensioner="selectedPensioner" OnPensionerUpdated="UpdatePensioner" OnCancel="HideEditForm" />
+                        <HumanResource.Models.PensionerForm Pensioner="selectedPensioner" OnPensionerUpdated="UpdatePensioner" OnCancel="HideEditForm" />
                     </div>
                 </div>
             </div>
